objects/ArObjB1__c.object
<CustomObject>
    <fields>
        <fullName>ArObjB1Desc__c</fullName>
        <label>ArObjB1Desc</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GG</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ArObjB1Phone__c</fullName>
        <label>ArObjB1Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ArObjB1Picklist1__c</fullName>
        <label>ArObjB1Picklist1</label>
        <picklist>
            <picklistValues>
                <fullName>aa</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>bb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>cc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>dd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>gg</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>ArObjB1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ArObjB1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ArObjB1s</pluralLabel>
    <recordTypes>
        <fullName>ArObjB1</fullName>
        <active>true</active>
        <label>ArObjB1_qustions</label>
    </recordTypes>
    <recordTypes>
        <fullName>ArObjB1_qustions2</fullName>
        <active>true</active>
        <label>ArObjB1_qustions2</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>